--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div id="mobileWheelControls" class="controls-wheel" style="display: none;">
+        <div id="mobileWheelControls" class="controls-wheel">
             <div id="virtualWheelBase">
                 <div id="virtualWheel"></div>
             </div>
