--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
+<!DOCTYPE html><html lang="ru"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Endless Racer 3D</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css"></head><body>
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
         
@@ -128,6 +124,4 @@
             </div>
         </div>
     </div>
-    <script src="game.js"></script>
-</body>
-</html>
+    <script src="game.js"></script></body></html>
